tests/fail/redirect_conflict_circular_merge.msh
# Conflict: merging both streams into each other is circular
[ls] 2>&1 1>&2 ;
